- Canoe travel interface now animates correctly
- Fix how the attack skill cape perk is calculated. It should now have a much more noticeable effect
- Properly track leaf-bladed sword drops in ::stats command
- Make broad bolts tradeable and fix their ranged strength
< ---- ABOVE Released NOVEMBER 22, 2021 https://gitlab.com/2009scape/2009scape/-/tags/Nov-22-2021 ---- >
- Animations for passing through Isafdar Dense Forest added
- Implement Wire Traps, Leaf Traps, and Stick Traps in Isafdar
- Quest point cape/hood no longer unequip on login if wearing QP hood
- Random Event Genie lamps now scale exp correctly
- Void mace now consumes runes correctly
- Add remote kicking support to the Management Server
- Added Christmas Event :)
- Added snow toggle to client config
< --- ABOVE Released December 4, 2021 https://gitlab.com/2009scape/2009scape/-/tags/Dec-4-2021 ---- >
- Shooting star discovery bonus xp is now gradually disbursed instead of lump-sum.
- Spending points to cancel your slayer task no longer sets your task streak to 0.
- Stars now have bots that will spawn and help mine for stars higher than level 5.
- Barrows equipment now lasts for 15 hours of combat instead of 40 minutes of combat.
- Fix granting hp xp on controlled
- Implemented HCIM Rework
< --- ABOVE Released December 15, 2021 https://gitlab.com/2009scape/2009scape/-/tags/Dec-15-2021 ---- >
- Implemented server performance monitor, many performance improvements
- Fishing and fishing trawler now use closer-to-empirical formulae.
- Server configuration language has been changed from JSON to TOML.
- Add Family Crest quest.
- Add mort myre stems and pears to bloom's effect, and add the sound effect for bloom.
- Add proper sound effects for the explorer's ring and fix leaf-bladed sword's sound effects.
- Fix wine of zamorak pickup interaction.
- Static clue drop ids replaced with their level appropriate proxy values
- Fix a bug where clue scrolls were rerolled to easy for most NPCs